Criação da class de imagens da variação do produto